--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
   <title>Play Classic Snake Game - Big Screen PC Edition</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Play the classic Snake Game online for free on your desktop browser. Challenge yourself with high-speed gameplay, real-time scoring, and a beautiful retro design. Perfect for fans of nostalgic arcade games and PC-based fun.">
   <meta name="naver-site-verification" content="b366dbb6459aafa1c91f8f26b783724b86199d71" />
   <style>
